# IBVS

./: README.md
ibvs_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ibvs_ws/devel/include/object_detection/: image_data.h
ibvs_ws/devel/include/ur5_vs/: joint_angles.h  joint_states.h  joint_vel.h  sim_variables.h  states.h
ibvs_ws/devel/lib/object_detection/: camshift_adaptive_kf_tracker  camshift_kalman_tracker  camshift_only_tracker  camshift_segmentation  kalman_filter_tracking  plots_detection
ibvs_ws/devel/lib/pkgconfig/: kfilter.pc  object_detection.pc  realsense2_camera.pc  realsense2_description.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur5_vs.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_modern_driver.pc  ur_msgs.pc
ibvs_ws/devel/lib/python2.7/dist-packages/object_detection/msg/: __init__.py  _image_data.py
ibvs_ws/devel/lib/python2.7/dist-packages/ur5_vs/msg/: __init__.py  _joint_angles.py  _joint_states.py  _joint_vel.py  _sim_variables.py  _states.py
ibvs_ws/devel/lib/python2.7/dist-packages/ur_driver/: __init__.py
ibvs_ws/devel/lib/python2.7/dist-packages/ur_kinematics/: __init__.py
ibvs_ws/devel/lib/ur5_vs/: gazebo_ibvs_area_intmatrix  gazebo_ibvs_centroid_area  gazebo_ibvs_three_features  gazebo_ibvs_two_features  gazebo_reconfigure_robot  gazebo_velocity_test_direct  new_ibvs_one_features  new_ibvs_three_features  new_ibvs_two_features  plots
ibvs_ws/devel/lib/ur_modern_driver/: ur_driver
ibvs_ws/devel/share/common-lisp/ros/object_detection/msg/: _package.lisp  _package_image_data.lisp  image_data.lisp  object_detection-msg.asd
ibvs_ws/devel/share/kfilter/cmake/: kfilterConfig.cmake
ibvs_ws/devel/share/object_detection/cmake/: object_detection-msg-extras.cmake  object_detection-msg-paths.cmake  object_detectionConfig.cmake
ibvs_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
ibvs_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
ibvs_ws/devel/share/roseus/ros/object_detection/: manifest.l
ibvs_ws/devel/share/roseus/ros/realsense2_camera/: manifest.l
ibvs_ws/devel/share/roseus/ros/ur5_vs/: manifest.l
ibvs_ws/devel/share/roseus/ros/ur_msgs/: manifest.l
ibvs_ws/devel/share/ur10_e_moveit_config/cmake/: ur10_e_moveit_configConfig.cmake
ibvs_ws/devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
ibvs_ws/devel/share/ur3_e_moveit_config/cmake/: ur3_e_moveit_configConfig.cmake
ibvs_ws/devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
ibvs_ws/devel/share/ur5_e_moveit_config/cmake/: ur5_e_moveit_configConfig.cmake
ibvs_ws/devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
ibvs_ws/devel/share/ur5_vs/cmake/: ur5_vs-msg-extras.cmake  ur5_vs-msg-paths.cmake  ur5_vsConfig.cmake
ibvs_ws/devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
ibvs_ws/devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
ibvs_ws/devel/share/ur_driver/cmake/: ur_driverConfig.cmake
ibvs_ws/devel/share/ur_e_description/cmake/: ur_e_descriptionConfig.cmake
ibvs_ws/devel/share/ur_e_gazebo/cmake/: ur_e_gazeboConfig.cmake
ibvs_ws/devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
ibvs_ws/devel/share/ur_kinematics/cmake/: ur_kinematicsConfig.cmake
ibvs_ws/devel/share/ur_modern_driver/cmake/: ur_modern_driverConfig.cmake
ibvs_ws/devel/share/ur_msgs/cmake/: ur_msgs-msg-extras.cmake  ur_msgs-msg-paths.cmake  ur_msgsConfig.cmake
ibvs_ws/src/object_detection/: CMakeLists.txt  package.xml
ibvs_ws/src/object_detection/msg/: sift_points.msg~
ibvs_ws/src/object_detection/src/: camshift_adaptive_kf_tracker.cpp  camshift_kalman_tracker.cpp  camshift_kf_tracking.cpp  camshift_only_tracker (复件).cpp  camshift_only_tracker.cpp  extended_kalman_filter_tracking.cpp  kalman_filter_depth_tracking.cpp  plots.cpp
ibvs_ws/src/object_detection/src(复件)/: camshift_adaptive_kf_tracker.cpp  camshift_kalman_filter2.cpp  camshift_kalman_tracker.cpp  camshift_only_tracker.cpp  camshift_segmentation.cpp  kalman_filter_tracking.cpp
ibvs_ws/src/object_detection/src(复件)/results/: camshiftfeatures.txt  featurescompare.txt  kalmanfeatures.txt
ibvs_ws/src/object_detection/src/results/: camshiftfeatures.txt
ibvs_ws/src/universal_robot/ur_gazebo/launch/: my_world.launch
ibvs_ws/src/universal_robot/ur_gazebo/world/: moving_ball_world.world  moving_ball_world_occulusion.world
ibvs_ws/src/ur5_vs/: CMakeLists.txt  new_ibvs_three_features.cpp  new_ibvs_two_features.cpp
ibvs_ws/src/ur5_vs/include/: gnuplot_ci.h  my_funcs.h
ibvs_ws/src/ur5_vs/msg/: states.msg
ibvs_ws/src/ur5_vs/src/: ball_animation_plugin(复件).cpp  ball_animation_plugin.cpp  gazebo_ibvs_area_intmatrix.cpp  gazebo_ibvs_centroid_area.cpp  gazebo_ibvs_three_features(附件).cpp  gazebo_ibvs_three_features.cpp  gazebo_ibvs_three_features（vel group）.cpp  gazebo_ibvs_two_features(复件).cpp  gazebo_ibvs_two_features.cpp  gazebo_reconfigure_robot.cpp  gazebo_velocity_test_direct.cpp  new_ibvs_one_features.cpp  new_ibvs_three_features (轴孔装配).cpp  new_ibvs_three_features.cpp  plots.cpp  velocity_controller_ros.cpp
ibvs_ws/src/ur5_vs/src/results/: 1.py  camera_vel.eps  error.txt  error_x.eps  error_y.eps  error_z.eps  joint_velocities.eps  joint_velocities1.txt  norm-error.eps  trackedfeatures.eps  trackedfeatures.txt
ibvs_ws/src/ur5_vs/src/results/beifen1/: camera_vel.eps  camera_vel.txt  error.txt  error_x.eps  error_y.eps  error_z.eps  joint_velocities.eps  joint_velocities.txt  norm-error.eps  trackedfeatures.eps  trackedfeatures.txt
ibvs_ws/src/ur5_vs/src/results/data/: camera_vel.eps  error_x.eps  error_y.eps  error_z.eps  joint_velocities.eps  norm-error.eps  trackedfeatures.eps
ibvs_ws/src/ur5_vs/src/results/data/data1/: camera_vel.eps  error_x.eps  error_y.eps  error_z.eps  norm-error.eps  trackedfeatures.eps
(+27 files in other folders)
